--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -5,7 +5,6 @@ stages:
       dockerfilePath: ./Dockerfile
       buildContext: .
       tag: pxe-tftp/pxe-tftpv.1
-      registry: 127.0.0.1:34490
-  - applyYamlConfig:
-      path: ./deployment.yaml
+      pushRemote: true
+      registry: index.docker.io
 timeout: 60
