--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -1,6 +1,6 @@
 port=0
-dhcp-range=10.42.0.255,proxy
+dhcp-range=192.168.0.255,proxy
 log-dhcp
 enable-tftp
-tftp-root=/tftpboot
+tftp-root=etc/tftp
 pxe-service=0,"Raspberry Pi Boot"
